src/test/deca/context/invalid/homemade/call_notmethod.deca
// trying to call on class something which is not a method

class A {
    int x;
}
{
    A a = new A();
    a.x();
}